  * Speed improvement (issue 96)
2016-12-12	v2.8.5	 olikraus@gmail.com
  * Bugfix for issue 96 (issue 106)
2016-12-20	v2.9.1	 olikraus@gmail.com
  * Speed improvement for AVR/KS0108 (issue 104)
  * Support for UC1604 (issue 111)
  * Support for PCD8544/Nokia Display (issue 107)
  * Change/fixed behavior of userInterfaceSelectionList (issue 112)
2016-12-23	v2.9.2	 olikraus@gmail.com
  * Reverted the setup for SSD1306_NONAME to the original setup (undo issue 98)
  * Introduced SSD1306_VCOMH0 for the max range setup (issue 116)
2016-12-30	v2.10.1	 olikraus@gmail.com
  * ST7565 LM6059 Display (issue 123)
  * SSD1606 eInk/ePaper Display (issue 100)
  * Documentation updates
2017-01-08	v2.11.4	 olikraus@gmail.com
  * Support for LC7981 (issue 134)
  * Support for PCF8812 (issue 135)
  * Fixed wrong half-move notation in Little Rook Chess (issue 137)
  * Support for ST7567, Pax Instruments GLCD Shield (issue 138)
  * Support for NT7534 (issue 143)
  * Support for SSD1327, Seeedstudio OLED (issue 145)
  * Support for SSD1305 (issue 146)
  * Support for DOGM132 (issue 147)
  * Fixed a bug in the draw pixel procedure which appears in full buffer mode,
    if the display width is not a multiple of 8 (issue 148)
  * Added XOR mode (setDrawColor 2, issue 56)
2017-01-15	v2.12.6	  olikraus@gmail.com
  * Support for SSD1309 (issue 113)
  * Enabled U8G2_HVLINE_SPEED_OPTIMIZATION (not sure why this was disabled)
  * Improved speed for ST7920 (up to 40%, issue 151)
  * Support for IST3020 (issue 153)
2017-02-07	v2.13.6	  olikraus@gmail.com
  * Support for ST7588 (issue 154)
  * ESP8266: Avoid RAM copy of the fonts (issue 159)
  * Support for SSD1607 (issue 133)
  * Support for hardware pin remapping on the ESP8266 (issue 158)
  * Bugfix for the KS0108 support (issue 168)
  * More fonts: https://github.com/olikraus/u8g2/wiki/fntgrpnbp (issue 174)
2017-xx-xx	v2.14.x	  olikraus@gmail.com
  * Bugfix: setFont does no longer reset the reference position (issue 195)
  